# ICFPC2007

./: .project  Endo.cabal  Paths_Endo.hs  build.sh  run.sh
Assets/Data/: Options.cfg
Endo/: Endo.hs  Main.hs
Endo/Application/: Boot.hs
Endo/Application/Assets/: ConfigScheme.hs
Endo/Application/Game/: GameState.hs
Endo/Application/Game/Engine/: Core.hs  Runtime.hs
Endo/IcfpcEndo/: Constants.hs  Endo.hs  Execution.hs  Facade.hs  Loader.hs  RuntimeSt.hs  View.hs  Wire.hs
Endo/Middleware/Config/: Scheme.hs
Endo/Middleware/Tracing/: Log.hs
Endo/Test/: EndoDnaTest.hs
Endo/View/: Config.hs  View.hs
scripts/: build-tests.sh  build.sh  copy-test-data.sh  copy.sh
