name:           Endo
version:        0.1
cabal-version:  >= 1.10
build-type:     Simple
author:         Alexander Granin
synopsis:       ICFPC 2007 - Morph Endo
description:    ICFPC 2007 - Morph Endo
license:        GPL-3
category:       Research
maintainer:     Alexander Granin <graninas@gmail.com>
stability:      experimental

executable Endo
  build-depends:   
                   base >= 4,
                   transformers,
                   containers,
                   hslogger >=1.2.3 && <1.2.4,
                   SDL-gfx >=0.6.0,
                   SDL >=0.6.5,
                   netwire >=5.0.0 && <5.1,
                   lens >=4.0.7 && <4.1,
                   linear >=1.9.1 && <1.10,
                   random >=1.0.1,
                   mtl >=2.1.2,
                   MissingH >=1.2.1 && <1.3,
                   ConfigFile >=1.1.1 && <1.2,
                   SDL-ttf >=0.6.2 && <0.7,
                   either >=4.1.1 && <4.2,
                   parsec >=3.1.5 && <3.2,
                   QuickCheck >=2.7,
                   bytestring >=0.10.0 && <0.11
  default-language: Haskell2010
  hs-source-dirs:  Endo
  ghc-options:     -O1 -threaded -outputdir ./.bin
  other-modules:   
                   Application.Boot,
                   Application.Game.Engine.Core,
                   Application.Game.Engine.GameWire,
                   Application.Game.Engine.Runtime,
                   Middleware.Config.Config,
                   Middleware.Config.Extra,
                   Middleware.Config.Facade,
                   Middleware.Config.Scheme,
                   Middleware.FRP.NetwireFacade,
                   Middleware.Parsing.Common,
                   Middleware.Parsing.Facade,
                   Middleware.Parsing.ParsecFacade,
                   Middleware.SDL.Environment,
                   Middleware.SDL.SDLFacade,
                   Middleware.Tracing.ErrorHandling,
                   Middleware.Tracing.Log,
                   View.Color,
                   View.Config,
                   View.Runtime,
                   Middleware.SDL.Render,
                   Test.EndoDnaTest,
                   IcfpcEndo.Facade,
                   IcfpcEndo.Loader,
                   IcfpcEndo.Endo,
                   IcfpcEndo.View,
                   IcfpcEndo.Wire,
                   Endo,
                   IcfpcEndo.Execution,
                   IcfpcEndo.Constants
  main-is:         Main.hs

